--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   # For adding a native splash screen to your Flutter application.
   flutter_native_splash: ^2.4.6
+  # OTP text field
+  pinput: ^5.0.2
 
 dev_dependencies:
   flutter_test:
