feat: Add Firebase App Distribution workflow and CI/CD setup
- Created GitHub Actions workflow for Firebase App Distribution.
- Added scripts for injecting google-services.json from environment variables.
- Updated README with Firebase distribution setup instructions.
- Added Fastlane configuration for Firebase distribution.
- Included necessary dependencies in Gemfile and pubspec.yaml.
- Created .env.example for environment variable setup.
- Updated .gitignore to exclude sensitive files.
- Added google-services.json.template for CI/CD.
- Configured Android build files for Firebase integration.

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -12,3 +12,6 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+
+# Google Services configuration - injected during CI/CD
+app/google-services.json
