--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   flutter_native_splash: ^2.4.6
   # OTP text field
   pinput: ^5.0.2
+  firebase_core: ^4.2.0
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -100,6 +102,7 @@ flutter:
   assets:
     - assets/images/
     - assets/fonts/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
