--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,10 @@ dependencies:
   shared_preferences: ^2.5.3
   # provides API to store data in secure storage.
   flutter_secure_storage: ^9.2.4
+  # A lightweight and blazing fast key-value database written in pure Dart.
+  hive_ce: ^2.15.1
+  # For finding commonly used locations on the filesystem
+  path_provider: ^2.1.5
   # easy way to add shimmer effect
   shimmer: ^3.0.0
   # The following adds the Cupertino Icons font to your application.
