--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,9 @@ dependencies:
   flutter_native_splash: ^2.4.6
   # OTP text field
   pinput: ^5.0.2
+  # Firebase
   firebase_core: ^4.2.0
+  # Environment variables
   flutter_dotenv: ^6.0.0
 
 dev_dependencies:
