--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   # For finding commonly used locations on the filesystem
   path_provider: ^2.1.5
   # easy way to add shimmer effect
-  shimmer: ^3.0.0
+  skeletonizer: ^2.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
